--- a/style.css
+++ b/style.css
@@ -3,98 +3,112 @@
   margin-top:0;
   padding: 0;
   font-family: "Poppins", "san-serif";
-
 }
 
 .video-background {
-  position: relative;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   width: 100vw;
-  height: 100vh;
-  z-index: 1;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-  size: cover;
-  background-position:center ;
+  height: 100%;
+  z-index: -1;
 
 }
 .video-background video {
   position: absolute;
-  width: 130vw;
-  height: 100vh;
-  margin-left: -12rem;
-  margin-top: -1.2rem;
+  top: 0;
+  width: 130%;
+  height: 100%;
+  left: -13rem;
   object-fit: cover;
-  overflow: hidden;
+  object-position: center;
+  backdrop-filter: blur(5px);
+
 }
 
 .header {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
-  padding: 0;
+  overflow: hidden;
   margin: 0;
-  text-align: center;
-  justify-content: center;
-  background: transparent;
-  backdrop-filter: blur(2px);
+  padding: 0;
 }
-.header .logo {
+.index-nav .logo {
   color: gold;
-  position: absolute;
-  padding: 1% 8%;
-  font-size: 25px;
+  font-size: 28px;
   font-weight: 600;
-  margin-left: -2rem;
+  text-decoration: none;
+  z-index: 1001;
+  padding: 0;
 
 }
-.header .nav-links{
-  position: absolute;
-  display: block;
-  justify-content: flex-end;
-  right: 50px;
-  top: 20px;
-  z-index: 999;
-  padding-right: 5%;
-  border: 3px solid red;
+.global-nav .logo {
+  padding: 2% 3%;
+  color: whitesmoke;
+  font-weight: 600;
+  font-size: 1.6rem;
+  text-decoration: none;
+  z-index: 1001;
 }
-.header .nav-links ul{
+.nav-links{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5% 4%;
+  z-index: 1000;
+  width: auto;
+
+}
+.nav-links ul{
+  gap: 5px;
   display:flex;
   list-style: none;
+  padding: 2% 0;
   margin: 0;
-  padding: 0;
-}
-.header .nav-links li {
-  margin:0 1.5rem;
-  position: relative;
-
 }
 .nav-links a {
-  color: goldenrod;
+  color: whitesmoke;
   text-decoration: none;
-  font-size: 16px;
-  font-weight: 700;
+  font-size: 22px;
+  font-weight: 550;
   transition: color 0.3s ease;
-  display: inline-block;
-  padding: 10px 0;
+  position: relative;
+  margin-left: 2rem;
 }
-.nav-links li::after{
+.nav-links a::after{
   content: '';
   position: absolute;
   width: 0;
   left: 0;
-  height: 2px;
+  height: 2.5px;
   background: #f44336;
-  display: block;
-  margin: auto;
   transition: width 0.3s ease;
+  bottom: -4px;
 }
-.nav-links li:hover::after{
-    width: 100%;
+.nav-links a:hover::after{
+  width: 100%;
+}
+.index-nav{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2px 6%;
+  box-sizing: border-box;
+  z-index: 1000;
+}
+.index-nav .nav-links a {
+  color: gold;
+}
+
+.global-nav{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  box-sizing: border-box;
+  z-index: 1000;
+  background: brown;
+  z-index: 1000;
 }
 .header h1{
   font-size: 62px;
@@ -103,18 +117,18 @@
   right: 0;
   left: 0;
 }
-.header .text-box{
+.text-box{
   min-width: 100%;
-  position: absolute;
-  margin-top: 25%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  position: relative;
+  margin-top: 2%;
+  top: 40%;
+  transform: translateY(-50%);
   text-align: center;
 }
 .header .text-box p{
-  color:black ;
+  color: whitesmoke;
   font-weight: 800;
-  font-size: 18px;
+  font-size: 1.5rem;
   margin: 10px 0 40px;
 }
 
@@ -129,6 +143,8 @@
   position: relative;
   cursor: pointer;
   background-color: goldenrod;
+
+
 }
 .hero-btn:hover {
   border: 1px solid #f44336;
@@ -136,198 +152,280 @@
   transition: 1s;
 
 }
-.header .hamburger {
+/*.hamburger {
  display: none;
+ cursor: pointer;
+ background: transparent;
+ border: none;
+ padding: 5px;
+ z-index: 1000;
+
+}
+.hamburger .bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  background: white;
+  transition: all 0.3s ease;
+}*/
+.hamburger {
+  position: relative;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 24px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10;
+}
+.bar {
+  display:block;
+  width: 30px;
+  height: 3px;
+  border-radius: 3px;
+  transition: all 0.3s linear;
+  padding: 2px 4%;
 
 }
 @media(max-width: 795px){
-* {
+ *{
   margin: 0;
-  left: 0;
- top: 0;
-  font-family: "Poppins", "san-serif";
+  padding: 0;
+  box-sizing: border-box;
   scroll-behavior: smooth;
   }
-  .video-background{
+  .header {
     position: relative;
-    justify-content: center;
-    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  .video-background{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
   .video-background video {
-  width: 110vw;
+  top: -7.5rem;
+  width: 140vw;
   height: 100vh;
-  margin-left: -3rem;
-  margin-top: -7.5rem;
+  margin-left: 0;
   object-fit: cover;
-  overflow: hidden;
+  object-position: center top;
   }
-  .header{
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    justify-content: center;
+  .index-nav .logo{
+    position:relative;
+    top: 1.5rem;
+    left: 17rem;
+    font-size: bold;
+    z-index: 1001;
+    color: goldenrod;
+    justify-content: space-between;
+
   }
-  .header .logo{
-    position:absolute;
-    display: block;
-    font-size: 18px;
-    margin-left: 22rem;
-    margin-top:2%;
-  }
-  .header .nav-links{
+
+  .global-nav .logo{
     position: fixed;
-    display: none;
-    top:0;
+    left: 20rem;
+    top:2rem;
+    font-size: 1.5rem;
+    z-index: 1001;
+    color: whitesmoke;
+    padding: 0;
+    margin: 0;
+  }
+  .index-nav{
+    position: relative;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    background: transparent;
+
+  }
+  .global-nav{
+    position: fixed;
+    padding: 2.7rem ;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background: brown;
+  }
+  .nav-links{
+    position: absolute;
+    display: flex;
+    top: 0;
     right: -100%;
     width: 35%;
     height: 70vh;
-    line-height: 2;
-    background: rgba(250, 250, 250, 0.76);
+    background: rgba(250, 250, 250, 0.9);
     backdrop-filter: blur(5px);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: right 0.3s ease;
-    z-index: 999;
-    padding: 0;
-    border: solid 2px #f44336;
-
+    transition: right 0.4s ease;
+    z-index: 1000;
+    border-right: 2.5px solid #f44336;
+    border-bottom: 2.5px solid #f44336;
+    border-bottom-right-radius: 10px;
+    visibility: hidden;
   }
-  .header .nav-links.active {
-    right: 0;
-    display: block;
+  .nav-links.active {
+    top: 0;
+    left: 0;
+    visibility: visible;
   }
-  .header .nav-links ul{
+  .nav-links ul{
     flex-direction: column;
-    align-items: center;
-    margin-left: 1.5rem;
-    margin-top: 3rem;
     padding: 0;
     width: 100%;
   }
-  .header .nav-links li{
-    margin: .5rem 0;
+  .nav-links li{
+    margin-top: 2rem;
     text-align: center;
-  }
-  .header.nav-links a{
-    font-size: 1.2rem;
-    padding: 0.3rem 3px;
-    transition: color 0.3s ease;
+    width: 100%;
 
   }
-  .header.nav-links li::after {
+  .nav-links a{
+    color: #333;
+    font-size: 1.2rem;
+    padding: 0;
+    transition: color 0.3s ease;
+  }
+  .nav-links a::after {
     content: '';
     position: absolute;
     left: 0;
     width: 0;
-    height: 2px;
+    height: 3px;
     background: #f44336;
     display:block;
-    margin:auto;
+    margin:3px;
     transition: width 0.3s ease;
   }
-  .header.nav-links li:hover::after{
-    width: 100%;
+  .nav-links a:hover::after{
+    width: 85%;
   }
-  .header .hamburger{
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    width: 30px;
-    height: 21px;
-    left: 3rem;
-    padding-top: 1.3%;
-    top: 50%;
-    z-index: 1000;
+  .hamburger {
+    position:absolute;
+    display: block;
     cursor: pointer;
     background: transparent;
     border: none;
+    width: 0;
+    z-index: 1001;
+    right: 100%;
+    left: 4%;
+    top: 1.8rem;
   }
-  .header .hamburger .bar{
-    display: block;
-    margin: -16.5rem;
-    height: 20px;
-    width: 15%;
+
+  .hamburger .bar{
+    display: flex;
+    margin: 6px 0;
+    width: 40px;
     background:goldenrod;
     transition: all 0.3s ease;
+
   }
+
       /* Hamburger to X animation */
   .hamburger.active .bar:nth-child(1) {
-    transform: translate(10px) rotate(45deg);
+    transform: translateY(10px) rotate(45deg);
   }
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
+    transform: translateX(-20px);
   }
   .hamburger.active .bar:nth-child(3) {
-    transform: translate(-10px) rotate(-45deg);
+    transform: translateY(-9px) rotate(-45deg);
   }
-  .text-box h1{
-    font-size: 30px;
+  .text-box {
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+  }
+  .header h1{
+    font-size: 40px;
+    position: relative;
     align-items: center;
     justify-content: center;
-    margin-top: 8rem;
     font-weight: 800;
-
   }
   .header .text-box p{
     position: relative;
-    margin-top: 12rem;
-    font-weight: 550;
+    padding-top: 1rem;
     color: #fff;
+    font-size: 18px;
   }
-  .services-row{
-    flex-direction: column;
-    gap: 5px;
-    padding-bottom: 10px;
+  .services h1{
+    margin-top: 3.5rem;
+    font-size: 2rem;
   }
-  .services nav{
-    flex-direction: column;
-    padding: 15px;
+  .services h2 {
+    position: relative;
+    line-height: 1.3;
   }
-  .services .nav-links {
-    padding: .5% 6%;
-  }
-  .services .nav-links ul {
-    flex-direction: column;
-    gap: 1rem;
-    margin-top: 1rem;
-    position:absolute;
-  }
-  .services .hamburger{
-    position: absolute;
+  .services-row {
     display: flex;
-    justify-content: space-around;
-    width: 30px;
-    height: 21px;
-    left: 3rem;
-    padding-top: 1.3%;
-    top: 50%;
-    z-index: 1000;
-    cursor: pointer;
-    background: transparent;
-    border: none;
+    flex-direction: column;
+
+    padding: 0 1rem;
+    margin: 0 auto;
+    max-width: 100%;
   }
-  .services .hamburger .bar{
+  .services-col {
+    flex: 100%;
+    margin: 0;
+    padding: 1.5rem;
+    box-sizing: border-box;
+    border-radius: 8px;
+    background: #f1caca;
+    box-shadow: 0 2px 5px rgb(0, 0,0,0.1);
     display: block;
-    margin: -16.5rem;
-    height: 20px;
-    width: 15%;
-    background:goldenrod;
-    transition: all 0.3s ease;
+    float: none;
   }
-      /* Hamburger to X animation */
-  .hamburger.active .bar:nth-child(1) {
-    transform: translate(10px) rotate(45deg);
+  .services-col h3 {
+    font-size: 1.5rem;
+    padding-top: 0;
   }
-  .hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-  .hamburger.active .bar:nth-child(3) {
-    transform: translate(-10px) rotate(-45deg);
+  .services-col p {
+    font-size: 1rem;
+    line-height: 1.5;
+    padding-top: 0;
   }
   .About-us h3{
     padding-bottom: 15px;
+  }
+  .Office {
+    position: absolute;
+    display: block;
+    width: 100%;
+    padding-top: 6rem;
+  }
+  .Office-col {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+  .Office .row {
+    padding-top: 5rem;
+  }
+  .About-us h1{
+    padding-top: 6rem;
+  }
+  .Goals h1 {
+    padding-top: 6rem;
+  }
+  .contact {
+    position: relative;
+    gap:2rem;
   }
 
 }
@@ -339,72 +437,14 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: 120vh;
   flex: 1;
-}
-.services .logo {
-  position: absolute;
-  display: inline-block;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: whitesmoke;
-  text-decoration: none;
-  z-index: 1000;
-  top: 1.6%;
-  left: 15%;
-}
-.services nav{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100vw;
-  padding: 20px 5%;
-  background-color: gray;
-  z-index: 1000;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.services .nav-links{
-  display: flex;
-  position: static;
-}
-.services .nav-links ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.services nav li{
-  position: relative;
-  margin: 0 1.5rem;
-}
-.services .nav-links a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  transition: color 0.3s ease;
-  display: inline-block;
-  padding: 10px 0;
-}
-.services li::after{
-  content: '';
-  position: absolute;
-  width: 0%;
-  left: 0;
-  bottom: 6px;
-  height: 2px;
-  background: #f44336;
-  transition:width 0.3s ease;
-}
-.services .nav-links li:hover::after{
-  width: 100%;
+  overflow: hidden;
 }
 .services h1{
   position: relative;
   text-align: center;
-  padding-top: 8rem;
+  padding-top: 2rem;
   font-size: 4rem;
   font-weight: 600;
   color:#f1caca;
@@ -414,22 +454,20 @@
   color:white ;
   font-size: 18px;
   font-weight: 200;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 .services p{
-  color: gray;
-  margin-top: 5px;
+  color: black;
   font-size: 14px;
-  font-weight: 300;
-  line-height: 20px;
+  font-weight: 500;
+  line-height: 15px;
+  padding-bottom: 10px;
 
 
 }
 .services-row{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  flex-wrap: wrap;
   margin: 45px 0 ;
   gap: 10px;
   padding: 0 10px;
@@ -440,10 +478,10 @@
   background: #f1caca;
   border-radius: 10px;
   margin: 10px;
-  margin-bottom: 2%;
   padding: 5px 10px;
   box-sizing: border-box;
   transition: all 0.3s ease;
+  margin-top: 1.5rem;
 }
 .services-col p{
   align-items: center;
@@ -455,6 +493,7 @@
 
 }
 .services h3{
+  color: gray;
   text-align: center;
   font-size:30px;
   font-weight: 600;
@@ -464,42 +503,21 @@
 .services-col:hover{
   box-shadow: 0 0 20px 0px rgb(0, 0,0,0.8);
 }
-@media(max-width: 768px){
-  .nav-links{
+/*@media(max-width: 769px){
+  .hamburger {
     display: block;
-    position: absolute;
   }
-
-  .services {
-    align-items: center;
+      /* Hamburger to X Animation *//*
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
   }
-  .services .logo {
-    text-align: right;
-    right:90px;
-    padding: 1%;
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
   }
-  .services nav{
-    position: absolute;
-    padding: 6% 6%;
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
-  .services nav ul {
-    display: flex;
-    flex: 1;
-    text-align: right;
-    justify-content:  right;
-    margin-right: -50px;
-  }
-  .services nav ul li{
-    margin: -2.3px;
-  }
-  .services-row{
-    flex-direction: column;
-  }
-  .services-col{
-    width: 95%;
-    margin: 30px auto;
-  }
-}
+}*/
 
 /*----- Office -----*/
 
@@ -512,54 +530,7 @@
   min-height: 100vh;
 
 }
-.Office .logo{
-  color: whitesmoke;
-  padding: -3% 3%;
-  margin-top:-0.7rem;
-  font-weight: 600;
-}
-.Office nav {
-  position: relative;
-  width: auto;
-  background:brown;
-  display: flex;
-  padding: 2% 5.5%;
-  justify-content: space-between;
-  align-items: center;
-}
-.Office nav a{
-  text-decoration: none;
-}
-.Office nav ul {
-  flex: 1;
-  text-align: right;
 
-}
-.Office nav ul li{
-  list-style: none;
-  display: inline-block;
-  padding: 3px 12px;
-  position: relative;
-
-}
-.Office nav ul li a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 200;
-}
-.Office ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-.Office ul li:hover::after{
-    width: 100%;
-}
 .Office h1{
   position: relative;
   margin-top:20px;
@@ -570,6 +541,7 @@
 .Office p{
   padding-top: 10px;
   color: white;
+  font-size: 22px;
 }
 .Office .row{
   display: flex;
@@ -620,32 +592,7 @@
   bottom: 49%;
   opacity: 1;
 }
-@media(max-width: 775px){
-  .office {
-    position:absolute;
-    display: fixed;
-  }
-  .office .logo {
-    text-align: left;
-    margin-left: -40px;
-  }
-  .office nav{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    padding: 3.5% 6%;
-  }
-  .office nav ul {
-    display: flex;
-    flex: 1;
-    text-align: right;
-    justify-content:  right;
-    margin-right: -50px;
-  }
-  .office nav ul li{
-    margin: -2px;
-  }
-}
+
 
 /*------About us-------*/
 .About-us{
@@ -656,53 +603,7 @@
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
-}
-.About-us .logo{
-  color: whitesmoke;
-  padding: -3% 3%;
-  margin-top:-0.7rem;
-  font-weight: 600;
-}
-.About-us nav {
-  width: auto;
-  background:brown;
-  display: flex;
-  padding: 2% 5.5%;
-  justify-content: space-between;
-  align-items: center;
-}
-.About-us nav a{
-  text-decoration: none;
-}
-.About-us nav ul {
-  flex: 1;
-  text-align: right;
-
-}
-.About-us nav ul li{
-  list-style: none;
-  display: inline-block;
-  padding: 3px 12px;
-  position: relative;
-
-}
-.About-us nav ul li a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 200;
-}
-.About-us ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-.About-us ul li:hover::after{
-    width: 100%;
+  top: 0;
 }
 .About-us h1{
   margin-top: 1rem;
@@ -751,6 +652,7 @@
   text-align: center;
   color: #f44336;
   font-weight: 700;
+  font-size: 2rem;
 
 }
 /*----Goals-----*/
@@ -758,7 +660,7 @@
 .Goals{
   text-align: center;
   padding-top: 0%;
-    text-align: center;
+  text-align: center;
   text-align: center;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/background-7038405.jpg');
   background-size: cover;
@@ -766,52 +668,6 @@
   background-repeat: no-repeat;
   min-height: 100vh;
 
-}
-.Goals .logo{
-  color: whitesmoke;
-  padding: -3% 3%;
-  margin-top:-0.7rem;
-  font-weight: 600;
-}
-.Goals nav {
-  background: brown;
-  display: flex;
-  padding: 2% 6%;
-  justify-content: space-between;
-  align-items: center;
-}
-.Goals nav a{
-  text-decoration: none;
-}
-.Goals nav ul {
-  flex: 1;
-  text-align: right;
-
-}
-.Goals nav ul li{
-  list-style: none;
-  display: inline-block;
-  padding: 3px 12px;
-  position: relative;
-
-}
-.Goals nav ul li a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 200;
-}
-.Goals ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-.Goals ul li:hover::after{
-    width: 100%;
 }
 .Goals h1{
  margin-top: 5%;
@@ -825,7 +681,7 @@
   color: white;
 }
 .Goals .row{
-  margin-top: 3%;
+  margin-top: 1%;
   display: flex;
   justify-content: space-between;
 }
@@ -857,12 +713,7 @@
 .Goals-col .fa{
   color:gold;
 }
-/*@media(max-width: 700px){
-  .Goals-col img{
-    margin-left: 0px;
-    margin-right: 15px;
-  }
-}
+
 /*----contact---*/
 .contact{
   display: flex;
